[package]
name = "backend-ma"
version = "0.1.0"
edition = "2021"
description = "Asset Management Backend with DDD Architecture"
authors = ["Developer"]

default-run = "backend-ma"


[dependencies]
# Web Framework & Async
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database (SQLx)
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls", 
    "postgres", 
    "chrono", 
    "json",
    "rust_decimal",
    "uuid"
] }

# Data Handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Financial
rust_decimal = { version = "1.35", features = ["serde-float"] }
rust_decimal_macros = "1.35"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Authentication
jsonwebtoken = "9.0"
argon2 = "0.5"

# Environment
dotenvy = "0.15"

# Async traits
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
deadpool-redis = "0.22.0"
redis = { version = "0.32", features = ["tokio-comp", "json"] }
csv = "1.4.0"
tokio-cron-scheduler = "0.15.1"

# Validation (optional, for future use)
# validator = { version = "0.18", features = ["derive"] }

[dev-dependencies]
http-body-util = "0.1.3"
# Testing
tokio-test = "0.4"
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.5", features = ["fs"] }

[[bin]]
name = "backend-ma"
path = "src/main.rs"
